sets hard coded height on header to prevent cards from overlapping content

--- a/styles/components/page-header/_page-header.scss
+++ b/styles/components/page-header/_page-header.scss
@@ -1,7 +1,7 @@
 @mixin base() {
     display: flex;
     flex-direction: column;
-    height: 75vh;
+    height: 700px;
     justify-content: space-around;
     padding-top: 120px;
 
